# next-fastapi-postgres-sample-crm

./: .gitignore  README.md
.devcontainer/: Dockerfile  compose.yml  devcontainer.json  postCreateCommand.sh  postStartCommand.sh
.env/: .env.prod  .env.sample  .env.stg
backend/: .gitignore  Dockerfile.dev  Dockerfile.prod  Dockerfile.stg  app.py  migrate.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 7e35ab3d7c07_auth.py  d88feea91fcf_initial.py  ea8953640a71_initial_migration.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  users.py
backend/app/api/v2/: router.py
backend/app/api/v2/endpoints/: company.py  users.py
backend/app/core/: config.py  security.py
backend/app/crud/: __init__.py  company.py  user.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/models/: company.py  user.py
backend/app/schemas/: __init__.py  company.py  user.py
db/: Dockerfile  init.sql
docker/dev/: compose.yml
docker/prod/: compose.yml
docker/stg/: compose.yml
frontend/: Dockerfile.dev  Dockerfile.prod  Dockerfile.stg  components.json  package-lock.json  package.json
frontend/app/: client-layout.tsx  layout.tsx  page.tsx
frontend/app/auth/callback/: page.tsx
frontend/app/auth/login/: page.tsx
frontend/app/auth/register/: page.tsx
frontend/components/: app-sidebar.tsx  login-form.tsx  register-form.tsx
frontend/contexts/: AuthContext.tsx
frontend/hooks/: useNavigation.ts
nginx/: default.conf
